Add Sign Out link, not really working

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,6 +12,6 @@ else
     <h1>Hello,</h1>
 }
     <p class="lead">ActivID Tap provides an easy and secure method to access Web Sites.</p>
-    <p><a href="http://www.hidglobal.com/products/software/activid" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="http://www.hidglobal.com/services/tap" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
