--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -2,8 +2,8 @@
 {
     <text>
         <ul class="nav navbar-nav navbar-right">
-            <li class="navbar-text">
-                @User.Identity.Name
+            <li>
+                <a href="https://adfs.hidservices.com/adfs/ls/?wa=wsignout1.0&wreply=@Url.Encode("http://www.hidglobal.com/services/tap")">Sign Out</a>
             </li>
         </ul>
     </text>
